Address review comments by: - Rename method to parse in JVMOptions - Add equals/hashCode to JVMOptions - Restrict access of methods - Fix typo